<resources>
    <string name="app_name">PKL Mobile</string>
    <string name="splash_in_text">Aplikasi PKL Mobile \n Oleh : \n Kelompok 6 \n Andrianto \n Seto \n Enrico</string>
    <string name="splash_out_text">Terima kasih telah menggunakan aplikasi ini. \n\n Kami sangat berharap masukan dari anda. Semua masukan silahkan disampaikan di email kelompok6@gmail.com.</string>
    <string name="pkl_image">PKL_Image</string>

    <string name="login_title">Halaman Login</string>
    <string name="login_text">Silakan Login untuk masuk ke dalam aplikasi, atau pilih menu Registrasi jika ingin mendaftar!</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="titik_dua">:</string>
    <string name="lt_iuser"><![CDATA[<iUser>]]></string>
    <string name="lt_ipassword"><![CDATA[<iPassword>]]></string>
    <string name="button_login">Login</string>
    <string name="button_register">Registrasi</string>
    <string name="blogin">Selamat anda telah berhasil login, selanjutnya silakan mengelola katalog atau bertransaksi pada halaman selanjutnya!</string>
    <string name="glogin">Mohon maaf user name atau password yang anda masukkan salah, silakan ulangi login, atau Registrasi jika belum terdaftar</string>

    <string name="register_title">REGISTRASI PENGGUNA \n APLIKASI PKL MOBILE</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_lapak">Alamat Lapak</string>
    <string name="no_hp">Nomor HP</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="produk_unggul">Produk Unggul</string>
    <string name="inama"><![CDATA[<iNama>]]></string>
    <string name="ialamat"><![CDATA[<iAlamat>]]></string>
    <string name="inohp"><![CDATA[<iNoHP>]]></string>
    <string name="itgllahir"><![CDATA[<iTglLahir>]]></string>
    <string name="iprodukunggul"><![CDATA[<iProdukUnggul>]]></string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="bregister">Selamat anda telah terdaftar, silakan login untuk menggunakan aplikasi ini! Saat login, gunakan alamat email yang anda telah daftarkan sebagai User name!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="detail_produk">DETAIL PRODUK</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_pokok">Harga Pokok</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="inamaproduk"><![CDATA[<iNamaProduk>]]></string>
    <string name="ihargaproduk"><![CDATA[<iHargaProduk>]]></string>
    <string name="ihargajual"><![CDATA[<iHargaJual>]]></string>
    
    <string name="detail_transaksi">DETAIL TRANSAKSI PENJUALAN</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="ikuantitas"><![CDATA[<iKuantitas>]]></string>

    <string name="transaksi">Transaksi</string>
    <string name="tambah">Tambah</string>
    <string name="rekap">Rekap</string>
    <string name="katalog">Katalog</string>
    <string name="keluar">Keluar</string>
    <string name="katalog_produk_pkl_someone_example_com">Katalog Produk PKL someone@example.com</string>
    <string name="titleTransaksi">Transaksi Penjualan PKL someone@example.com</string>
    <string name="title_rekap">REKAP TRANSAKSI PENJUALAN</string>

</resources>
