<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kelompok_6.pkl_mobile.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutLogin"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:id="@+id/textView"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="#000000" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TableLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/LinearLayoutLogin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/user_name"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:id="@+id/textView4"
                android:layout_column="3"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextUsername"
                android:layout_column="4"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:singleLine="false"
                android:hint="@string/lt_iuser"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/password"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:id="@+id/textView5"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextpassword"
                android:layout_column="4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/lt_ipassword"
                android:textSize="20sp"
                android:inputType="numberPassword" />

        </TableRow>

        <requestFocus />
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout2"
        android:layout_below="@+id/TableLayoutLogin"
        android:layout_marginTop="20dp" >

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/button_login"
            android:id="@+id/buttonLogin"
            android:textColor="#000000"
            android:background="@android:color/holo_red_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/button_register"
            android:id="@+id/buttonRegister"
            android:textColor="#000000"
            android:background="@android:color/holo_red_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="47dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Step : 0"
        android:id="@+id/step"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
