<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kelompok_6.pkl_mobile.Register">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutRegister"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:id="@+id/textViewRegistrasiPKL"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textAlignment="center" />


    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/LinearLayoutRegister"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/alamat_email"
                        android:id="@+id/textViewEmail"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua3"
                        android:layout_column="3"
                        android:textAlignment="center"
                        android:layout_marginLeft="5dp"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/editTextEmail"
                        android:layout_column="4"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:singleLine="false"
                        android:hint="@string/lt_iuser"
                        android:layout_marginLeft="5dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="top" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/nama_lengkap"
                        android:id="@+id/textViewNamaLengkap"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua4"
                        android:layout_column="3"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextNama"
                        android:layout_column="4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/inama"
                        android:textSize="18sp"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/alamat_lapak"
                        android:id="@+id/textViewAlamatLapak"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua5"
                        android:layout_column="3"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextAlamat"
                        android:layout_column="4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/ialamat"
                        android:textSize="18sp"
                        android:inputType="text" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/no_hp"
                        android:id="@+id/textViewNoHp"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua6"
                        android:layout_column="3"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextNoHp"
                        android:layout_column="4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/inohp"
                        android:textSize="18sp" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/tanggal_lahir"
                        android:id="@+id/textViewTtl"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua7"
                        android:layout_column="3"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ediTextTtl"
                        android:layout_column="4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/itgllahir"
                        android:textSize="18sp" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/produk_unggul"
                        android:id="@+id/textViewProdukUnggul"
                        android:layout_column="0"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        android:id="@+id/textViewTitikDua8"
                        android:layout_column="3"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextPU"
                        android:layout_column="4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/iprodukunggul"
                        android:textSize="18sp"
                        android:inputType="text" />

                </TableRow>

                <requestFocus />
            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/scrollView"
                android:layout_centerHorizontal="true">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/simpan"
                    android:id="@+id/buttonProses"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/holo_red_light"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="47dp" />

                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/batal"
                    android:id="@+id/buttonBatal"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_red_light"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="false"
                    android:layout_marginRight="47dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
