<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutWrapper"
    tools:context="com.kelompok_6.pkl_mobile.DetailProduk">

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_produk"
            android:id="@+id/title"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayoutDetailProdForm"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_produk"
                android:id="@+id/textViewNamaProduk"
                android:singleLine="false"
                android:layout_weight="0"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:id="@+id/textView9"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextNamaProduk"
                android:layout_weight="1"
                android:textColor="#000000"
                android:hint="&lt;iNamaProduk>"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga_pokok"
                android:id="@+id/textViewHargaPokok"
                android:layout_weight="0"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextHargaPokok"
                android:layout_weight="1"
                android:singleLine="false"
                android:textColor="#000000"
                android:hint="&lt;iHargaPokok>" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga_jual"
                android:id="@+id/textViewHargaJual"
                android:layout_weight="0"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:id="@+id/textView13"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextHargaJual"
                android:layout_weight="1"
                android:hint="&lt;iHargaJual>"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

</LinearLayout>